--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,16 @@
-version: 2
-jobs:
-  build:
-    machine: true
-    steps:
-      - checkout
-      - run: |
-          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
-
-      - run: docker build -t entregasos/frontend:$CIRCLE_BRANCH .
-
-      - run: docker push entregasos/frontend:$CIRCLE_BRANCH
-
+version: 2.1
 workflows:
     build:
       jobs:
         - build
+jobs:
+  build:
+    machine:
+      image: circleci/classic:latest
+      docker_layer_caching: true
+    steps:
+      - checkout
+      - run: |
+          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+      - run: docker build -t entregasos/frontend:$CIRCLE_BRANCH .
+      - run: docker push entregasos/frontend:$CIRCLE_BRANCH
