--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,24 @@
 version: 2.1
-workflows:
-    build:
-      jobs:
-        - build
 jobs:
   build:
+    branches:
+      ignore: "master"
     machine:
       image: circleci/classic:latest
     steps:
       - checkout
       - run: |
           echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
-      - run: docker build -t entregasos/frontend:$CIRCLE_BRANCH .
-      - run: docker push entregasos/frontend:$CIRCLE_BRANCH
+      - run: docker build -t entregasos/frontend:$CIRCLE_BUILD_NUM .
+  
+  build-and-publish:
+    machine:
+      image: circleci/classic:latest
+    branches:
+      only: "master"
+    steps:
+      - checkout
+      - run: |
+          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+      - run: docker build -t entregasos/frontend:$CIRCLE_BUILD_NUM .
+      - run: docker push entregasos/frontend:$CIRCLE_BUILD_NUM
