--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,6 @@
 version: 2.1
 jobs:
   build:
-    branches:
-      ignore: "master"
     machine:
       image: circleci/classic:latest
     steps:
@@ -11,14 +9,19 @@ jobs:
           echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
       - run: docker build -t entregasos/frontend:$CIRCLE_BUILD_NUM .
   
-  build-and-publish:
+  publish:
     machine:
       image: circleci/classic:latest
-    branches:
-      only: "master"
     steps:
-      - checkout
-      - run: |
-          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
-      - run: docker build -t entregasos/frontend:$CIRCLE_BUILD_NUM .
       - run: docker push entregasos/frontend:$CIRCLE_BUILD_NUM
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - publish:
+          filters:
+            branches:
+              only:
+                - master
