--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ workflows:
     jobs:
       - build
       - publish:
+          requires:
+            - build
           filters:
             branches:
               only:
