--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "angular2-text-mask": "^9.0.0",
+    "faker": "^4.1.0",
+    "libphonenumber-js": "^1.7.48",
     "ngx-dropzone-wrapper": "^9.0.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.10.3",
@@ -33,9 +35,10 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
-    "@types/node": "^12.11.1",
+    "@types/faker": "^4.1.11",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
