--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "ng": "ng",
     "start-dev": "ng serve",
     "start": "node server.js",
-    "build": "ng build",
-    "build-prod": "ng build --prod",
-    "postinstall": "ng build --prod",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
