--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@angular/service-worker": "~9.0.7",
     "angular2-text-mask": "^9.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
